# ceos

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  failure-modes.md  invariants.md  manifesto.md  observation-models.md
reference/: ecos_kernel_v1.py
